--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
   "type": "commonjs",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "dev": "nodemon ./dist/main.js",
+    "start": "node ./dist/main.js",
     "build": "tsc"
   },
   "keywords": [],
@@ -14,7 +14,9 @@
   "license": "ISC",
   "dependencies": {
     "express": "^4.18.2",
+    "inversify": "^6.0.1",
     "nodemon": "^2.0.20",
+    "reflect-metadata": "^0.1.13",
     "tslog": "^4.7.1"
   },
   "devDependencies": {
