--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "@prisma/client": "^4.9.0",
     "bcryptjs": "^2.4.3",
     "body-parser": "^1.20.1",
     "class-transformer": "^0.5.1",
@@ -25,18 +26,22 @@
     "express": "^4.18.2",
     "inversify": "^6.0.1",
     "nodemon": "^2.0.20",
+    "pg": "^8.8.0",
     "reflect-metadata": "^0.1.13",
-    "tslog": "^4.7.1"
+    "tslog": "^4.7.1",
+    "typeorm": "^0.3.11"
   },
   "devDependencies": {
     "@types/bcryptjs": "^2.4.2",
     "@types/express": "^4.17.15",
+    "@types/node": "^18.11.18",
     "@typescript-eslint/eslint-plugin": "^5.48.2",
     "@typescript-eslint/parser": "^5.48.2",
     "eslint": "^8.32.0",
     "eslint-config-prettier": "^8.6.0",
     "eslint-plugin-prettier": "^4.2.1",
     "prettier": "^2.8.3",
+    "prisma": "^4.9.0",
     "ts-node": "^10.9.1",
     "typescript": "^4.9.4"
   }
